# polars-avro

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
benches/: bench.rs
polars_avro/: __init__.py  _avro_rs.pyi  _cloud.py  _scan.py  _sink.py  _source.py
resources/: grains.avro
src/: des.rs  error.rs  ffi.rs  lib.rs  py.rs  scan.rs  schema.rs  ser.rs  sink.rs  tests.rs
tests/: test_module.py  test_scan.py  test_sink.py
