[package]
name = "polars-avro"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[features]
deflate = ["arrow-avro/deflate"]
snappy = ["arrow-avro/snappy", "apache-avro/snappy"]
bzip2 = ["arrow-avro/bzip2", "apache-avro/bzip"]
xz = ["arrow-avro/xz", "apache-avro/xz"]
zstd = ["arrow-avro/zstd", "apache-avro/zstandard"]
pyo3 = [
    "dep:object_store",
    "dep:pyo3",
    "dep:pyo3-polars",
    "dep:polars-python",
    "polars-io/python",
    "polars-io/aws",
    "polars-io/azure",
    "polars-io/gcp",
    "polars-plan/cloud",
    "deflate",
    "snappy",
    "bzip2",
    "xz",
    "zstd",
]

[dependencies]
polars = { version = "0.53", default-features = false, features = [
    "dtype-array",
    "dtype-categorical",
    "dtype-date",
    "dtype-datetime",
    "dtype-decimal",
    "dtype-i16",
    "dtype-i8",
    "dtype-struct",
    "dtype-time",
    "dtype-u16",
    "dtype-u8",
    "lazy",
    "timezones",
] }
arrow = { version = "58.0", default-features = false, features = ["ffi"] }
arrow-avro = { version = "58.0", default-features = false }
serde_json = "1.0"
polars-arrow = "0.53"
polars-io = { version = "0.53", features = ["file_cache"] }
polars-plan = "0.53"
polars-python = { version = "0.53", optional = true }
polars-utils = "0.53"
pyo3 = { version = "0.27", optional = true }
pyo3-polars = { version = "0.26", features = [
    "lazy",
    "dtype-categorical",
    "dtype-struct",
    "dtype-array",
], optional = true }
apache-avro = "0.21.0"
object_store = { version = "0.13", optional = true }

[dev-dependencies]
bigdecimal = "0.4.9"
chrono = "0.4.40"
uuid = "1.21"
polars = { version = "0.53", default-features = false, features = ["fmt"] }
polars-io = { version = "0.53", features = ["file_cache", "avro"] }
