[package]
name = "polars-avro"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[features]
deflate = ["arrow-avro/deflate"]
snappy = ["arrow-avro/snappy", "apache-avro/snappy"]
bzip2 = ["arrow-avro/bzip2", "apache-avro/bzip"]
xz = ["arrow-avro/xz", "apache-avro/xz"]
zstd = ["arrow-avro/zstd", "apache-avro/zstandard"]
pyo3 = [
    "dep:pyo3",
    "dep:pyo3-arrow",
    "deflate",
    "snappy",
    "bzip2",
    "xz",
    "zstd",
]

[dependencies]
arrow = { version = "59.0", default-features = false }
arrow-avro = { version = "59.0", default-features = false }
apache-avro = "0.21.0"
pyo3 = { version = "0.29", optional = true, features = ["abi3-py310"] }
pyo3-arrow = { version = "0.19", optional = true, default-features = false }

[dev-dependencies]
uuid = "1.23.3"
